# promtuz

./: .gitignore  Cargo.toml  README.md
android/: .gitignore  gradle.properties  secrets.properties.example
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: adi-registration.properties
android/app/src/main/java/com/promtuz/chat/: LauncherActivity.kt  Promtuz.kt
android/app/src/main/java/com/promtuz/chat/backup/: BackupWorker.kt
android/app/src/main/java/com/promtuz/chat/data/: ChatPrefs.kt
android/app/src/main/java/com/promtuz/chat/di/: AppModule.kt  ViewModels.kt
android/app/src/main/java/com/promtuz/chat/domain/model/: ChatSummary.kt  MessageContent.kt  PeerSignals.kt  ReactionGroup.kt  SendStatus.kt  UiMessage.kt
android/app/src/main/java/com/promtuz/chat/navigation/: AppNavigation.kt  AppNavigator.kt  NavStage.kt  Routes.kt
android/app/src/main/java/com/promtuz/chat/presentation/state/: ConnectionState.kt  InviteSheet.kt
android/app/src/main/java/com/promtuz/chat/presentation/viewmodel/: AppVM.kt  ChatVM.kt  QrScannerVM.kt  RelaysVM.kt  ShareIdentityVM.kt  UpdateVM.kt  WelcomeVM.kt
android/app/src/main/java/com/promtuz/chat/security/: KeyManager.kt
android/app/src/main/java/com/promtuz/chat/ui/activities/: QrScanner.kt  ShareIdentity.kt
android/app/src/main/java/com/promtuz/chat/ui/appearance/: AppearanceProvider.kt  AppearanceStore.kt  ChatAppearance.kt  ChatColorScheme.kt
android/app/src/main/java/com/promtuz/chat/ui/components/: AppDropMenu.kt  AppUpdateIcon.kt  Avatar.kt  BubbleShape.kt  ChatBottomBar.kt  ChatTopBar.kt  ChatWallpaper.kt  DashedHorizontalDivider.kt  HomeChatList.kt  HomeChatListItem.kt  HomeFab.kt  HomeMoreMenu.kt  HomeTopBar.kt  InviteBottomSheet.kt  MessageBubble.kt  MessageContextMenu.kt  NotificationPrimer.kt  SwipeToReply.kt  TypingBubble.kt  UpdateSheet.kt
android/app/src/main/java/com/promtuz/chat/ui/constants/: Animations.kt
android/app/src/main/java/com/promtuz/chat/ui/screens/: AboutScreen.kt  ChatAppearanceScreen.kt  ChatScreen.kt  QrScannerScreen.kt  RelaysScreen.kt  SettingsScreen.kt  ShareIdentityScreen.kt
android/app/src/main/java/com/promtuz/chat/ui/theme/: Color.kt  Schemes.kt  (+1 more)
android/app/src/main/java/com/promtuz/chat/update/: UpdateRepository.kt
android/app/src/main/java/com/promtuz/core/: AppCloseService.kt  CoreBridge.kt  CoreInitializer.kt  Observe.kt  PresenceStore.kt
android/app/src/main/java/com/promtuz/core/adapter/: CoreEventBus.kt
android/app/src/main/java/com/promtuz/core/push/: PushNotifier.kt  PushService.kt
android/app/src/main/res/drawable/: i_copy.xml  i_delete.xml  i_download.xml  i_edit.xml  i_reply.xml
android/app/src/main/res/values/: connections.xml
android/app/src/main/res/xml/: file_paths.xml
android/gradle/: libs.versions.toml
certs/: root_ca.pem
common/: Cargo.toml
common/src/: lib.rs
common/src/crypto/: encrypt.rs  mod.rs
common/src/macros/: mod.rs
common/src/node/: capability.rs  config.rs  enroll.rs  mod.rs
common/src/proto/: client_rel.rs  client_res.rs  dht_p2p.rs  mls_wire.rs  mod.rs  p2p_relay.rs  pack.rs  push.rs  relay_res.rs
common/src/quic/: config.rs  id.rs  mod.rs  p256.rs  xor.rs
gateway/: Cargo.toml  gateway.example.toml
gateway/pkg/: 51pzgateway-unattended  gateway.toml  install.sh  pzgateway.service
gateway/pkg/scripts/: postinst  postrm  prerm
gateway/src/: config.rs  main.rs  registry.rs  resolver_link.rs
gateway/src/gateway/: mod.rs
gateway/src/quic/: acceptor.rs  handler.rs
ios/Promtuz/: ContentView.swift  PromtuzApp.swift
ios/Promtuz.xcodeproj/: project.pbxproj
jni_macro/src/: lib.rs
libcore/: Cargo.toml
libcore/src/: lib.rs  messaging.rs  platform.rs  push.rs  state.rs
libcore/src/api/: identity.rs  init.rs  messaging.rs  misc.rs  mod.rs  p2p.rs  qr.rs  recovery.rs  relays.rs  update.rs
libcore/src/api/identity/: mod.rs  scanner.rs
libcore/src/data/: backup.rs  contact.rs  identity.rs  idqr.rs  message.rs  mod.rs  recovery.rs  relay.rs
libcore/src/db/: messages.rs  mls.rs  mod.rs  network.rs  outbox.rs  peers.rs
libcore/src/delivery/: mod.rs
libcore/src/e2e/: mod.rs
libcore/src/events/: connection.rs  messaging.rs  mod.rs
libcore/src/mls/: epoch_catchup.rs  group.rs  keypackage.rs  mod.rs  provider.rs  scheduler.rs  signer.rs  storage.rs  types.rs  welcome.rs
libcore/src/p2p/: candidate.rs  mod.rs  punch.rs  signal.rs  socket.rs
libcore/src/quic/: dht_client.rs  dialer.rs  peer_config.rs  relay_dht_client.rs  server.rs
relay/: .gitignore  Cargo.toml  README.md  build.rs  config.toml
relay/pkg/: build-deb.sh  install.sh  pzrelay.service  relay.toml
relay/pkg/scripts/: postinst  postrm  prerm
relay/src/: cli.rs  cmd.rs  control.rs  lib.rs  main.rs  stunturn.rs
relay/src/dht/: bootstrap.rs  cache.rs  config.rs  forward.rs  handler.rs  key_helpers.rs  lookup.rs  metrics.rs  mls_fanout.rs  mls_kp.rs  mls_kp_originate.rs  mls_welcome.rs  mls_welcome_originate.rs  mod.rs  publish.rs  push_wake.rs  queue_drain.rs  rate_limit.rs  routing.rs  store.rs  tls_extract.rs
relay/src/dht/mls/: kp.rs
relay/src/dht/sync/: merkle.rs  mod.rs  rpc.rs
relay/src/quic/: dialer.rs  resolver_link.rs
relay/src/quic/handler/: mod.rs  peer.rs
relay/src/quic/handler/client/: handshake.rs  mod.rs
relay/src/quic/handler/client/events/: drain.rs  drain_auth.rs  forward.rs  misc.rs  mls_relay.rs  mod.rs  presence.rs
relay/src/relay/: mod.rs
relay/src/storage/: db.rs  mod.rs
relay/src/util/: config.rs  dht_log.rs  mod.rs  rocksdb.rs
resolver/: .gitignore  Cargo.toml  README.md  config.toml
resolver/pkg/: pzresolver.service  resolver.toml
resolver/pkg/scripts/: postinst  postrm  prerm
resolver/src/: main.rs
resolver/src/quic/handler/: client.rs  relay.rs  resolver.rs
resolver/src/resolver/: mod.rs  relays.rs  rpc.rs
scripts/: build-deb.sh
testnet/src/: certs.rs  client.rs  deploy.rs  main.rs
tools/scripts/: build-deb.sh
tools/testnet/: Cargo.toml
tools/testnet/src/: main.rs  proc.rs  sandbox.rs
(+4 files in other folders)
