[workspace]
members = ["resolver", "relay", "common", "libcore", "jni_macro"]
resolver = "2"

[workspace.package]
license = "AGPL-3.0-or-later"
repository = "https://github.com/promtuz/promtuz"

[workspace.dependencies]
ed25519-dalek = { version = "2.2.0", features = ["pkcs8", "rand_core"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
rustls = { version = "0.23.35", features = ["aws-lc-rs"] }
serde = { version = "1.0.228", features = ["derive"] }
quinn = { version = "0.11.9", features = ["rustls"] }
tokio = { version = "1.48.0", features = ["full"] }
serde_bytes = { version = "0.11.19" }
anyhow = { version = "1.0.102" }
thiserror = { version = "2.0.18" }
rand = { version = "0.9.2" }
rustls-pemfile = "2.2.0"
crossterm = "0.29.0"
toml = "0.9.8"
log = "0.4.29"
hex = "0.4.3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 8
panic = "unwind"
strip = "debuginfo"
debug = true
incremental = false

[profile.release.package."*"]
opt-level = 3
