[workspace]
members = ["resolver", "relay", "gateway", "common", "libcore", "tools/uniffi-bindgen"]
resolver = "2"

[workspace.package]
version = "0.1.4-test2"
license = "AGPL-3.0-or-later"
repository = "https://github.com/promtuz/promtuz"

[workspace.dependencies]
ed25519-dalek = { version = "2.2.0", features = ["pkcs8", "rand_core"] }
rustls = { version = "0.23.41", features = ["aws-lc-rs"] }
serde = { version = "1.0.228", features = ["derive"] }
quinn = { version = "0.11.11", features = ["rustls"] }
tokio = { version = "1.52.3", features = ["full"] }
serde_bytes = { version = "0.11.19" }
anyhow = { version = "1.0.103" }
thiserror = { version = "2.0.18" }
rand = { version = "0.10.1", features = ["sys_rng"]}
rustls-pemfile = "2.2.0"
crossterm = "0.29.0"
toml = "1.1.2"
log = "0.4.33"
hex = "0.4.3"
zeroize = "1.9.0"
clap = { version = "4.6.1", features = ["derive"] }
base64 = "0.22.1"
notify = "8.2.0"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 8
panic = "unwind"
strip = "debuginfo"
debug = true
incremental = false

[profile.release.package."*"]
opt-level = 3
