[package]
name = "common"
version = "0.1.0"
edition = "2024"
description = "Shared library — crypto, protocols, QUIC config, identity"
license.workspace = true
repository.workspace = true

[features]
crypto = [
  "dep:chacha20poly1305",
  "dep:hkdf",
  "dep:x25519-dalek",
  "dep:ed25519-dalek",
  "dep:sha2",
]
proto = ["quic", "sysutils", "types"]
quic = [
  "dep:rustls",
  "dep:rustls-pemfile",
  "dep:quinn",
  "dep:blake3",
  "dep:data-encoding",
  "p256",
  "macros",
  "node",
]
p256 = ["dep:p256"]
sysutils = ["dep:sysinfo", "tokio"]
tokio = ["dep:tokio"]
macros = []
certgen = ["quic", "crypto", "dep:rcgen"]
node = []
types = []
# aka relay & resolver
server = ["types"]
# aka libcore
client = ["types"]

[[bin]]
name = "certgen"
path = "src/bin/certgen.rs"
required-features = ["certgen"]

[dependencies]
log.workspace = true
hex.workspace = true
toml.workspace = true
serde.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde_bytes.workspace = true
quinn = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
x25519-dalek = { workspace = true, optional = true }
ed25519-dalek = { workspace = true, features = ["pkcs8", "pem"], optional = true }
rustls-pemfile = { workspace = true, optional = true }
tokio = { workspace = true, features = ["io-util", "time"], optional = true }

blake3 = { version = "1.8.2", optional = true }
data-encoding = { version = "2.9.0", optional = true }
chacha20poly1305 = { version = "0.10.1", features = ["std"], optional = true }
hkdf = { version = "0.12.4", optional = true }
sha2 = { version = "0.10.9", optional = true }
p256 = { version = "0.13.2", optional = true, features = ["pkcs8"] }
rcgen = { version = "0.14.7", features = ["x509-parser"], optional = true }
ciborium = "0.2.2"
sysinfo = { version = "0.37.2", optional = true }
serde_with = "3.16.1"
postcard = { version = "1.1.3", features = ["alloc", "postcard-derive"] }
async-trait = "0.1.89"
