[package]
name = "gateway"
version.workspace = true
edition = "2024"
description = "Push gateway — blind APNs/FCM/UnifiedPush wake node"
license.workspace = true
repository.workspace = true

[dependencies]
common = { path = "../common", features = ["proto", "macros", "server", "crypto"] }
anyhow.workspace = true
toml.workspace = true
serde.workspace = true
quinn.workspace = true
tokio.workspace = true
clap.workspace = true
base64.workspace = true
ed25519-dalek.workspace = true
parking_lot = "0.12.5"
# Per-source-IP accept-side rate limiter (same pattern as the resolver).
governor = "0.10.4"
# FCM HTTP v1: rustls-only client (webpki roots, no OpenSSL) + service-account
# JWT signing (RS256 via ring, already in the tree). serde_json builds bodies.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots"] }
jsonwebtoken = "9"
serde_json = "1"

