[package]
name = "relay"
version.workspace = true
edition = "2024"
description = "Relay server — DHT node, client auth, presence replication"
license.workspace = true
repository.workspace = true
default-run = "relay"

# The relay exposes both a `[lib]` and a `[[bin]]`. The library form lets the
# e2e harness spin up real `Dht` instances in-process; the binary in
# `main.rs` is a thin shell over the lib. Module visibility is `pub` only
# where the shell binary or the harness needs it.
[lib]
name = "relay"
path = "src/lib.rs"

[[bin]]
name = "relay"
path = "src/main.rs"

[dependencies]
common = { path = "../common", features = [
    "proto",
    "sysutils",
    "macros",
    "crypto",
    "server",
] }
hex.workspace = true
toml.workspace = true
rand.workspace = true
quinn.workspace = true
serde.workspace = true
tokio.workspace = true
rustls.workspace = true
anyhow.workspace = true
thiserror.workspace = true
crossterm.workspace = true
serde_bytes.workspace = true
ed25519-dalek.workspace = true
rustls-pemfile.workspace = true
rust-rocksdb = { version = "0.46.0", features = ["multi-threaded-cf"] }
parking_lot = "0.12.5"
zerocopy = "0.8.40"
tokio-util = "0.7.18"
# Per-peer DHT inbound-RPC rate limiter. Same crate/version as the resolver
# side; keyed on `NodeId` instead of `IpAddr`.
governor = "0.7"
# Post-handshake TLS pubkey extraction in `dht::handler`. Same parser
# libcore uses for peer certs.
x509-parser = "0.18"

# ---------------------------------------------------------------------------
# Debian packaging (`cargo deb`) → `pzrelay_<version>_<arch>.deb`.
# Binary installs as /usr/bin/pzrelay; config + CA under /etc/pzrelay;
# runtime keys + RocksDB under /var/lib/pzrelay (service user `pzrelay`).
# ---------------------------------------------------------------------------
[package.metadata.deb]
name = "pzrelay"
maintainer = "Promtuz <relay@promtuz.dev>"
copyright = "2026 Promtuz, AGPL-3.0-or-later"
section = "net"
priority = "optional"
# cargo-zigbuild static-links libstdc++/libgcc into the binary; the only
# remaining runtime dep is glibc. Pinned explicitly (not "$auto") so the deb
# builds on any host without dpkg-shlibdeps. Floor 2.28 = the zig glibc target.
depends = "libc6 (>= 2.28)"
extended-description = "Promtuz relay node: Kademlia DHT, client auth, presence + MLS handshake replication, store-and-forward."
assets = [
    ["target/release/relay", "usr/bin/pzrelay", "755"],
    ["pkg/relay.toml", "etc/pzrelay/relay.toml", "644"],
    ["../certs/root_ca.pem", "etc/pzrelay/ca.pem", "644"],
    ["pkg/pzrelay.service", "lib/systemd/system/pzrelay.service", "644"],
]
conf-files = ["/etc/pzrelay/relay.toml"]
maintainer-scripts = "pkg/scripts/"
