[package]
name = "resolver"
version.workspace = true
edition = "2024"
description = "Resolver server — relay discovery service"
license.workspace = true
repository.workspace = true

[dependencies]
common = { path = "../common", features = ["proto", "macros", "server", "crypto"] }
anyhow.workspace = true
toml.workspace = true
hex.workspace = true
quinn.workspace = true
rustls.workspace = true
serde.workspace = true
tokio.workspace = true
rand.workspace = true
rustls-pemfile.workspace = true
ed25519-dalek.workspace = true
parking_lot = "0.12.5"
# Per-source-IP accept-side rate limiter. Token bucket with automatic state
# expiry (no per-IP entry kept forever).
governor = "0.7"

# ---------------------------------------------------------------------------
# Debian packaging (`cargo deb`) → `pzresolver_<version>_<arch>.deb`.
# Binary installs as /usr/bin/pzresolver; config + CA under /etc/pzresolver.
# The resolver is stateless (in-memory) — no /var/lib, nothing written at run.
# Build via ./scripts/build-deb.sh resolver (cargo-zigbuild → libc6 only).
# ---------------------------------------------------------------------------
[package.metadata.deb]
name = "pzresolver"
maintainer = "Promtuz <relay@promtuz.dev>"
copyright = "2026 Promtuz, AGPL-3.0-or-later"
section = "net"
priority = "optional"
depends = "libc6 (>= 2.28)"
extended-description = "Promtuz resolver: stateless relay discovery service."
assets = [
    ["target/release/resolver", "usr/bin/pzresolver", "755"],
    ["pkg/resolver.toml", "etc/pzresolver/resolver.toml", "644"],
    ["../certs/root_ca.pem", "etc/pzresolver/ca.pem", "644"],
    ["pkg/pzresolver.service", "lib/systemd/system/pzresolver.service", "644"],
]
conf-files = ["/etc/pzresolver/resolver.toml"]
maintainer-scripts = "pkg/scripts/"
